<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_background">

    <LinearLayout
        android:id="@+id/container_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatImageButton
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            android:background="@android:color/transparent"
            android:foreground="?attr/selectableItemBackground"
            android:src="@drawable/ic_back" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/alerts_string"
            android:textColor="@color/black"
            android:textSize="23sp"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:id="@+id/text_view_add_measurement"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="5dp"
        android:text="@string/add_measurement_string"
        android:textColor="@color/black"
        android:textSize="23sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/container_toolbar" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/container_temperature"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_view_add_measurement"
        style="@style/MeasurementContainerStyle">
        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@color/red_complementary" />

        <View style="@style/HorizontalDividerViewStyle" />


        <EditText
            android:hint="Temperature"
            style="@style/AddMeasurementEditTextStyle" />

        <View style="@style/HorizontalDividerViewStyle" />

        <TextView
            android:text="@string/degrees_celsius"
            style="@style/AddMeasurementUnitTextViewStyle" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/container_blood_pressure"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/container_temperature"
        style="@style/MeasurementContainerStyle">
        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@color/red_complementary" />

        <View style="@style/HorizontalDividerViewStyle" />


        <EditText
            android:hint="@string/blood_pressure_string"
            style="@style/AddMeasurementEditTextStyle" />

        <View style="@style/HorizontalDividerViewStyle" />

        <TextView
            android:text="@string/mmhg_string"
            style="@style/AddMeasurementUnitTextViewStyle" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/container_blood_sugar_level"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/container_blood_pressure"
        style="@style/MeasurementContainerStyle">
        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@color/red_complementary" />

        <View style="@style/HorizontalDividerViewStyle" />


        <EditText
            android:hint="@string/blood_sugar_level_string"
            style="@style/AddMeasurementEditTextStyle" />

        <View style="@style/HorizontalDividerViewStyle" />

        <TextView
            android:text="@string/gperl_string"
            style="@style/AddMeasurementUnitTextViewStyle" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/container_describe_status"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/container_blood_sugar_level"
        style="@style/MeasurementContainerStyle">

        <EditText
            android:hint="@string/describe_your_status_string"
            style="@style/AddMeasurementEditTextStyle" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/container_select_image_video"
        style="@style/MeasurementContainerStyle"
        app:layout_constraintTop_toBottomOf="@id/container_describe_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">
        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/ic_image"/>

        <TextView
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_image_video_string" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/container_select_audio"
        style="@style/MeasurementContainerStyle"
        app:layout_constraintTop_toBottomOf="@id/container_select_image_video"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageButton
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_play" />

        <TextView
            android:layout_margin="5dp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/test_cough_breath_string"
            android:textSize="20sp" />

    </androidx.appcompat.widget.LinearLayoutCompat>



</androidx.constraintlayout.widget.ConstraintLayout>